# rolabesti

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  rolabesti.py  settings.py  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: tests.yml
modules/: arguments.py  checker.py  copier.py  database.py  limiter.py  lister.py  logger.py  player.py  searcher.py  sorter.py  tagger.py
rolabesti/: __init__.py  __main__.py  arguments.py  checker.py  constants.py  copier.py  database.py  displayer.py  limiter.py  logger.py  models.py  mongo.py  parser.py  player.py  printer.py  rolabesti.py  settings.py  slicer.py  sorter.py  tagger.py  utils.py  validator.py
rolabesti/cli/: main.py  options.py  utils.py
rolabesti/cli/commands/: __init__.py  config.py  copy.py  init.py  list.py  play.py  tag.py
rolabesti/conf/: settings.py  validator.py
rolabesti/config/: __init__.py  settings.py  utils.py
rolabesti/controllers/: __init__.py  config.py  controller.py  copy.py  init.py  list.py  parser.py  play.py  search.py  tag.py  utils.py
rolabesti/database/: __init__.py  db.py  mongodb.py  tinydb.py
rolabesti/models/: __init__.py  filters.py  id3.py  sortings.py  track.py
rolabesti/views/: __init__.py  tracklist.py  utils.py
tests/: test_parser.py  utils.py
tests/controllers/: test_parser.py
tools/: json_tools.py  misc.py  process.py
