[tool.poetry]
name = "rolabesti"
version = "0.5.3"
description = "CLI app to manage, search, and play collections of mp3 tracks."
authors = ["Kinuax <kinuax@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kinuax/rolabesti/"
repository = "https://github.com/kinuax/rolabesti/"
documentation = "https://github.com/kinuax/rolabesti/"
keywords = ["mp3", "id3", "vlc", "mongo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
docstring-inheritance = "2.2.0"
mutagen = "1.47.0"
platformdirs = "4.2.0"
pydantic = "2.7.0"
pydantic-settings = "2.2.1"
pydub = "0.25.1"
pygame = "2.5.2"
pymongo = "4.6.2"
tinydb = "4.8.0"
tomlkit = "0.12.4"
typer = "0.12.3"
wurlitzer = "3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
tox = "4.14.2"

[tool.poetry.scripts]
rolabesti = "rolabesti.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
